stop depending on geolocation-db
